Updated rails from 4.2.8 to 5.0.2 and all other gems. Preserved font-awesome, instead of default glyphicons.

--- a/todo.ad
+++ b/todo.ad
@@ -1,9 +1,10 @@
 = TODO
 
 - [*] Move from "Couch" to "CouchPotato"
+- [*] And final move to Mongo
 - [*] Create and Update records
 * [ ] and add a trigger to it
-* [ ] and move from db:seed task to normal task and link together
+* [*] and move from db:seed task to normal task and link together
 - [*] Download configs from Devices (Equipment) as attachments
 - [*] Parse downloaded configs
 * [*] configuration
